tests/asm-link/_consistency/section-union/align-ofs-conflict/rgbasm.err
error: cannot align the section's lower 4 bits to $0e
   ╭─[ one-two.asm:7:15 ]
   │
 7 │ SECTION UNION "conflicting alignment", WRAM0 {ATTRS}
   │               ───────────┬───────────  
   │                          ╰───────────── the lower 3 bits would be equal to $07 at this point
───╯
1 error generated.
